# ccbell-sound-generator

./: .dockerignore  .gitignore  CCBELL_SOUND_GENERATOR_PLAN.md  CLAUDE.md  Dockerfile  Dockerfile.base  Dockerfile.standalone  GEMINI.md  LICENSE  README.md  docker-compose.oracle.yml  docker-compose.yml  secrets.env.example  wrangler.jsonc
backend/: pyproject.toml  requirements.txt
backend/.claude/: ralph-loop.local.md
backend/app/: __init__.py  main.py
backend/app/api/: routes.py  websocket.py
backend/app/core/: config.py  logging.py  models.py
backend/app/data/: hooks.py  themes.py
backend/app/data/hook_styles/ambient/: aurora.json  candle-light.json  cathedral.json  cloud-drift.json  deep-space.json  moss-garden.json  rain-window.json  starlight.json  tape-loop.json  tide-pool.json
backend/app/data/hook_styles/idle-prompt/ambient/: fog-hover.json  still-drone.json  suspended-note.json
backend/app/data/hook_styles/idle-prompt/jazz/: cool-breeze.json  empty-stage.json  lounge-wait.json
backend/app/data/hook_styles/idle-prompt/mechanical/: idle-steam.json  standby-whir.json  ticking-clock.json
backend/app/data/hook_styles/idle-prompt/minimal/: held-breath.json  quiet-pulse.json  sine-drift.json
backend/app/data/hook_styles/idle-prompt/nature/: breeze-sigh.json  cricket-song.json  still-water.json
backend/app/data/hook_styles/idle-prompt/retro-8bit/: idle-animation.json  pause-screen.json  waiting-tune.json
backend/app/data/hook_styles/idle-prompt/sci-fi/: cryo-sleep.json  orbit-hold.json  standby-hum.json
backend/app/data/hook_styles/jazz/: blue-note.json  bossa-nova.json  brass-section.json  cool-breeze.json  drum-circle.json  midnight-sax.json  smooth-keys.json  swing-time.json  velvet-lounge.json  walking-bass.json
backend/app/data/hook_styles/mechanical/: anvil-forge.json  brass-compass.json  clock-tower.json  gear-train.json  iron-press.json  piston-engine.json  steam-works.json  telegraph.json  typewriter.json  windup-box.json
backend/app/data/hook_styles/minimal/: chalk-line.json  dot-matrix.json  glass-touch.json  ink-drop.json  light-point.json  needle-point.json  paper-fold.json  silk-thread.json  snow-crystal.json  wire-frame.json
backend/app/data/hook_styles/nature/: bamboo.json  birdsong.json  coral-reef.json  forest.json  meadow.json  mountain.json  ocean.json  rain-garden.json  river.json  stone-path.json
backend/app/data/hook_styles/permission-prompt/ambient/: deep-inquiry.json  echo-question.json  fog-horn.json
backend/app/data/hook_styles/permission-prompt/jazz/: blue-note.json  curious-riff.json  doorbell-swing.json
backend/app/data/hook_styles/permission-prompt/mechanical/: bell-pull.json  pressure-alert.json  valve-warning.json
backend/app/data/hook_styles/permission-prompt/minimal/: glass-ask.json  light-tap.json  two-note-rise.json
backend/app/data/hook_styles/permission-prompt/nature/: branch-snap.json  owl-call.json  thunder-rumble.json
backend/app/data/hook_styles/permission-prompt/retro-8bit/: choose-wisely.json  menu-select.json  question-block.json
backend/app/data/hook_styles/permission-prompt/sci-fi/: access-query.json  incoming-hail.json  scan-alert.json
backend/app/data/hook_styles/post-tool-use/ambient/: echo-fade.json  release-sigh.json  ripple-out.json
backend/app/data/hook_styles/post-tool-use/jazz/: chord-stab.json  rim-shot.json  snap-back.json
backend/app/data/hook_styles/post-tool-use/mechanical/: bolt-set.json  hammer-fall.json  stamp-press.json
backend/app/data/hook_styles/post-tool-use/minimal/: dot-placed.json  mark-set.json  tap-done.json
backend/app/data/hook_styles/post-tool-use/nature/: acorn-drop.json  branch-break.json  splash-land.json
backend/app/data/hook_styles/post-tool-use/retro-8bit/: block-break.json  enemy-down.json  hit-confirm.json
backend/app/data/hook_styles/post-tool-use/sci-fi/: beam-discharge.json  data-logged.json  target-hit.json
backend/app/data/hook_styles/pre-tool-use/ambient/: breath-in.json  string-taut.json  tension-build.json
backend/app/data/hook_styles/pre-tool-use/jazz/: deep-breath.json  pickup-note.json  stick-click.json
backend/app/data/hook_styles/pre-tool-use/mechanical/: clutch-in.json  hammer-raise.json  valve-open.json
backend/app/data/hook_styles/pre-tool-use/minimal/: edge-touch.json  focus-point.json  needle-drop.json
backend/app/data/hook_styles/pre-tool-use/nature/: bowstring-taut.json  cat-crouch.json  hawk-dive.json
backend/app/data/hook_styles/pre-tool-use/retro-8bit/: power-charge.json  ready-set.json  sword-draw.json
backend/app/data/hook_styles/pre-tool-use/sci-fi/: beam-charge.json  scan-init.json  targeting-lock.json
backend/app/data/hook_styles/retro-8bit/: arcade-flash.json  boss-battle.json  coin-rush.json  dungeon-key.json  high-score.json  level-complete.json  pixel-quest.json  power-up.json  save-point.json  warp-zone.json
backend/app/data/hook_styles/sci-fi/: cyber-grid.json  data-stream.json  hologram.json  ion-drive.json  nebula-pulse.json  plasma-core.json  quantum-systems.json  star-map.json  warp-drive.json  zero-gravity.json
backend/app/data/hook_styles/session-end/ambient/: hall-empty.json  light-dims.json  tape-stop.json
backend/app/data/hook_styles/session-end/jazz/: bar-closing.json  goodnight.json  last-note.json
backend/app/services/: audio.py  github.py  model_loader.py  pack.py
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
(+239 files in other folders)
