[package]
name = "ccbell-sound-generator"
version = "1.1.0"
description = "AI-powered notification sound generator for Claude Code"
authors = ["mpolatcan"]
edition = "2021"

[lib]
name = "ccbell_sound_generator_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["time"] }
